<resources>
    <string name="app_name">АЛФ РБ</string>
    <string name="reg_button">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="regPhone">Мобильный телефон:</string>
    <string name="regCode">Код подтверждения:</string>
    <string name="regCode2">Код</string>
    <string name="login_button">войти</string>
    <string name="reject">ОТМЕНА</string>
    <string name="ok">ОК</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Главная</string>
    <string name="title_tournament">Турниры</string>
    <string name="title_club">Клубы</string>
    <string name="title_players">Игроки</string>
    <string name="title_user">Профиль</string>
    <string name="title_ads">Объявления</string>
    <string name="title_ads2">ОБЪЯВЛЕНИЯ</string>
    <string name="title_news">Новости</string>
    <string name="title_news2">НОВОСТИ</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="tournamentStatusFinish">Завершен</string>
    <string name="tournamentTitle">Кубок Бурятии по мини-футболу. Первый этап. Золотая лига</string>
    <string name="tournamentDate">27.01.2018-28.02.2018</string>
    <string name="tournamentCommandNum">Количество команд:</string>
    <string name="tournamentInfoCalendar">Календарь</string>
    <string name="tournamentInfoTable">Таблица</string>
    <string name="tournamentInfoTimetable">Расписание</string>
    <string name="tournamentInfoPlayers">Игроки</string>
    <string name="tournamentInfoCommand">Команды</string>
    <string name="newsSomeTitle">В мире футбола чето там изменилось. Вау. Как неожиданно. Так интересно</string>
    <string name="newsSomeDate">27.01.18</string>
    <string name="error">Ошибка</string>
    <string name="playerInv">Пригласить игрока</string>
    <string name="createClub">Создать клуб</string>
    <string name="playerInvClub">Пригласить в клуб</string>
    <string name="playerInvCommand">Команда:</string>
    <string name="playerClub">В клуб</string>
    <string name="playerCommand">В команду</string>
    <string name="advertisingOk">OK</string>
    <string name="advertisingTitle">СПОНСОР</string>
    <string name="advertisingText">Партнер АЛФ РБ</string>
    <string name="tournamentFilter">Фильтр</string>
    <string name="tournamentFilterStatus">Статус</string>
    <string name="tournamentFilterAge">Возраст</string>
    <string name="tournamentFilterAge1">от</string>
    <string name="tournamentFilterAge2">до</string>
    <string name="tournamentFilterCommandNum">Количество команд</string>
    <string name="showAllNews">Показать все новости</string>
    <string name="showAllAds">Показать все объявления</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="tournamentTabInfo">финал</string>
    <string name="tournamentTime">13:30</string>
    <string name="editMatchTime">00:00</string>
    <string name="editTime">Тайм</string>
    <string name="tournamentStadium">с/з ВСГУТУ</string>
    <string name="tournamentCommandTitle1">Лара</string>
    <string name="tournamentCommandTitle2">Спартак</string>
    <string name="myCommands">Мои команды</string>
    <string name="myCommands2">Команды</string>
    <string name="commandPlayer">Игрок</string>
    <string name="commandPlayer2">Игрок:</string>
    <string name="commandAbbrev1">№ - Место в турнире</string>
    <string name="commandAbbrev2">РМ - Разница забитых и пропущенных мячей</string>
    <string name="commandAbbrev3">О - Количество очков</string>
    <string name="commandAbbreviation1">И - Количество проведенных матчей</string>
    <string name="commandAbbreviation2">Г - Количество забитых мячей</string>
    <string name="commandAbbreviation3">ЖК - Количество действующих желтых карточек</string>
    <string name="commandAbbreviation4">КК - Количество действующих красных карточек</string>
    <string name="commandAbbreviation5">Д - Количество действующих дисквалификаций на будущие матчи</string>
    <string name="fishText">По своей сути рыбатекст является альтернативой традиционному lorem ipsum, который вызывает у некторых людей недоумение при попытках прочитать рыбу текст. В отличии от lorem ipsum, текст рыба на русском языке наполнит любой макет непонятным смыслом и придаст неповторимый колорит советских времен.</string>
    <string name="title_activity_command_info">CommandInfoActivity</string>
    <string name="commandInfoMembers">Члены клуба:</string>
    <string name="allAdsShown">ВСЕ ОБЪЯВЛЕНИЯ ПРОСМОТРЕНЫ</string>
    <string name="allNewsShown">ВСЕ НОВОСТИ ПРОСМОТРЕНЫ</string>
    <string name="allTournamentsShown">ВСЕ ТУРНИРЫ ПРОСМОТРЕНЫ</string>
    <string name="allClubsShown">ВСЕ КЛУБЫ ПРОСМОТРЕНЫ</string>
    <string name="allPlayersShown">ВСЕ ИГРОКИ ПОКАЗАНЫ</string>
    <string name="allNewsButton">Все новости</string>
    <string name="search">Поиск по игрокам...</string>
    <string name="back">Назад</string>
    <string name="next">Дальше</string>
    <string name="remove">Удалить</string>
    <string name="changeProfile">Редактировать профиль</string>
    <string name="changeCommand">Редактировать команду</string>
    <string name="editClub">Редактировать клуб</string>
    <string name="protocol">Протокол</string>
    <string name="editProtocol">Редактировать протокол</string>
    <string name="confirmProtocol">Подтвердить протокол</string>
    <string name="participants">Участники матча</string>
    <string name="editProtocolResponsiblePersons">Ответственные лица</string>
    <string name="protocolScore">Текущий счет</string>
    <string name="addEvent">Добавить событие</string>
    <string name="editEvent">Редактировать событие</string>
    <string name="escapeClub">Удалить клуб</string>
    <string name="edit">Редактировать</string>
    <string name="agreement">Авторизуясь, вы соглашаетесь на обработку ваших персональных данных</string>
    <string name="score">Счет</string>
    <string name="finalScore">Итоговый счет</string>
    <string name="representative">Представитель:</string>
    <string name="event">Событие:</string>
    <string name="event3">Событие</string>
    <string name="event2">События</string>
    <string name="time">Время:</string>
    <string name="half">Тайм:</string>
    <string name="name">Имя</string>
    <string name="nameProfile">Имя:</string>
    <string name="surname">Фамилия</string>
    <string name="surnameProfile">Фамилия:</string>
    <string name="patronymic">Отчество</string>
    <string name="patronymicProfile">Отчество:</string>
    <string name="DOB">Дата рождения</string>
    <string name="DOBProfile">Дата рождения:</string>
    <string name="login">Логин</string>
    <string name="loginProfile">Логин:</string>
    <string name="pass">Пароль</string>
    <string name="passProfile">Пароль:</string>
    <string name="coach">Тренер:</string>
    <string name="coach2">Тренер</string>
    <string name="invitation">Приглашения на турнир</string>
    <string name="userCommandInfoPlayersNum">Количество игроков:</string>
    <string name="emptyTournaments">СПИСОК ТУРНИРОВ ПУСТ</string>
    <string name="emptyInvitation">СПИСОК ПРИГЛАШЕНИЙ ПУСТ</string>
    <string name="emptyClubs">НЕТ ПРИГЛАШЕНИЙ</string>
    <string name="referees">Судьи</string>
    <string name="refereeSettings">Назначить судей</string>
    <string name="refereeSettings2">Назначить на матчи</string>
    <string name="inspector">Инспектор:</string>
    <string name="inspector2">Инспектор</string>
    <string name="referee1_2">1-й судья</string>
    <string name="referee1">1-й судья:</string>
    <string name="referee2_2">2-й судья</string>
    <string name="referee2">2-й судья:</string>
    <string name="referee3">3-й судья:</string>
    <string name="referee3_2">3-й судья</string>
    <string name="abbrev1">Г - гол</string>
    <string name="abbrev2">А - автогол</string>
    <string name="abbrev3">Ф - фол</string>
    <string name="abbrev4">КК - красная карточка</string>
    <string name="abbrev5">ЖК - желтая карточка</string>
    <string name="abbrev6">Д - дисквалификация</string>
    <string name="you">Вы</string>
    <string name="fouls">Фолы</string>
    <string name="ownGoals">Автоголы</string>
    <string name="penalty">Пенальти</string>
    <string name="referee4_2">Хронометрист</string>
    <string name="referee4">Хронометрист:</string>
    <string name="matches">Матчи</string>
    <string name="club">Клубы</string>
    <string name="commands">Команды</string>
    <string name="createCommand">Создать команду</string>
    <string name="tournament">Турнир:</string>
    <string name="league">Лига:</string>
    <string name="club2">Клуб:</string>
    <string name="myClub">Мой клуб</string>
    <string name="num">№:</string>
    <string name="num3">№</string>
    <string name="num2">Номер</string>
    <string name="numRussia">(+7)</string>
    <string name="sms">На ваш номер отправлен код для подверждения.</string>
    <string name="commandTitle">Название команды:</string>
    <string name="commandTitle2">Название команды</string>
    <string name="structure">Состав</string>
    <string name="buttonOk">Принять</string>
    <string name="buttonCancel">Отклонить</string>
    <string name="clubInv">Приглашения в клуб</string>
    <string name="playersInv">Приглашенные игроки</string>
    <string name="title">Название:</string>
    <string name="title2">Название</string>
    <string name="desc">Описание:</string>
    <string name="desc2">Описание</string>
    <string name="addPlayer">Добавить игрока</string>
    <string name="autho">Пройдите авторизацию</string>
    <string name="empty">Ничего нет</string>
    <string name="empty2">Не назначено</string>
    <string name="not_inv">Здесь будут отображаться приглашения от команд</string>
    <string name="not_league_matches">Здесь будут отображаться матчи</string>
    <string name="not_league_commands">Здесь будут отображаться команды</string>
    <string name="not_league_players">Здесь будут отображаться игроки</string>
    <string name="not_leagues">Вы пока не заявлены ни на один турнир</string>
    <string name="not_club">Вы пока не состоите ни в одном клубе</string>
    <string name="not_command">Вы пока не участвуете ни в одной команде</string>
    <string name="not_match">Для Вас пока нет ближайших матчей</string>
    <string name="not_matches">Пока нет утвержденных матчей</string>
    <string name="not_coming_match">На этой неделе нет матчей</string>
    <string name="not_match_referee">У судьи нет ближайших матчей</string>
    <string name="not_event">В этом матче еще ничего не произошло</string>
    <string name="commandRules">Для участия в турнире команда должна включать минимум 5 игроков. Добавить игроков можно в разделе \"Игроки\" или в разделе \"Команды\" профиля.</string>
    <string-array name="spinnerItem">
        <item>по проведенным матчам</item>
        <item>по забитым мячам</item>
        <item>по количеству ЖК</item>
        <item>по количеству КК</item>
    </string-array>
    <string name="abbreviation">Сокращения:</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
