<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layout_marginTop="33dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:orientation="vertical">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:paddingStart="4sp"
            android:gravity="start"
            android:textColor="@color/colorLightGrayForText"
            android:textSize="12sp"
            android:text="@string/regPhone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_regular"
                android:paddingStart="4sp"
                android:paddingEnd="4sp"
                android:gravity="start"
                android:textColor="@color/colorLightGrayForText"
                android:textSize="15sp"
                android:text="@string/numRussia"/>
            <EditText
                android:id="@+id/registrationPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/colorBottomNavigationUnChecked"
                android:textColorHint="@color/colorLightGrayForText"
                android:fontFamily="@font/manrope_regular"
                android:hint="@string/num2"
                android:inputType="phone"/>
        </LinearLayout>
        <Button
            android:id="@+id/registrationButtonSendCode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/manrope_semibold"
            android:textColor="@color/colorPrimary"
            android:text="@string/next"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:paddingStart="4sp"
            android:layout_marginBottom="20sp"
            android:gravity="start"
            android:textColor="@color/colorLightGrayForText"
            android:textSize="12sp"
            android:text="@string/sms"/>
        <LinearLayout
            android:id="@+id/registrationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:paddingStart="4sp"
            android:gravity="start"
            android:textColor="@color/colorLightGrayForText"
            android:textSize="12sp"
            android:text="@string/regCode"/>
        <EditText
            android:id="@+id/registrationCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MyEditText"
            android:hint="@string/regCode2"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/registrationButtonCheckCode"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/manrope_semibold"
            android:textColor="@color/colorPrimary"
            android:text="@string/next"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>