<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="5sp"
    android:layout_marginBottom="5sp"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:paddingStart="4sp"
        android:gravity="start"
        android:textColor="@color/colorLightGrayForText"
        android:textSize="12sp"
        android:text="@string/event"/>
    <Spinner
        android:id="@+id/editProtocolSpinnerEvent"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/spinner_shape"
        android:spinnerMode="dialog"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:paddingStart="4sp"
        android:gravity="start"
        android:textColor="@color/colorLightGrayForText"
        android:textSize="12sp"
        android:text="@string/time"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/editProtocolEventMinutes"
            android:layout_width="40sp"
            android:gravity="end"
            android:layout_height="wrap_content"
            style="@style/MyEditText"
            android:hint="@string/editMatchTime"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/manrope_regular"
            android:layout_marginStart="2sp"
            android:gravity="start"
            android:textColor="@color/colorLightGrayForText"
            android:textSize="12sp"
            android:text=":"/>
        <EditText
            android:id="@+id/editProtocolEventSeconds"
            android:layout_width="40sp"
            android:layout_height="wrap_content"
            style="@style/MyEditText"
            android:hint="@string/editMatchTime"
            android:inputType="number"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:paddingStart="4sp"
        android:gravity="start"
        android:textColor="@color/colorLightGrayForText"
        android:textSize="12sp"
        android:text="@string/half"/>
    <Spinner
        android:id="@+id/editProtocolSpinnerHalf"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/spinner_shape"
        android:spinnerMode="dialog"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:paddingStart="4sp"
        android:gravity="start"
        android:textColor="@color/colorLightGrayForText"
        android:textSize="12sp"
        android:text="@string/commandPlayer2"/>
    <Spinner
        android:id="@+id/editProtocolSpinnerPlayers"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:background="@drawable/spinner_shape"
        android:spinnerMode="dialog"/>

    <Button
        android:id="@+id/editProtocolDeleteEvent"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="@font/manrope_semibold"
        android:textColor="@color/colorPrimary"
        android:text="@string/remove"/>
    <View
        android:id="@+id/editProtocolLine"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="12dp"
        android:layout_height="1dp"
        android:background="@color/colorLightGray" />
</LinearLayout>